dealing with error messages

--- a/global.css
+++ b/global.css
@@ -27,7 +27,7 @@ table        { border: inset; border-color: white; }
 .unhidden    { display: block; }
 table.center { margin-left:auto; margin-right:auto; }
 #result      { border-color: red; }
-tr.error       { background-color: red; }
+.error       { font-family: terminal; background-color: red; }
 pre.output   { background-color: white; }
 span.repeated { background-color: red }
 span.header { background-color: blue }
