added limit in the number of files

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
   <p>
   <nav>
   <ul>
-    <% programs.each do |p| %>
+    <% programs.sort.each do |p| %>
       <li><a href="<%= p.name %>" <%=current?('/'+p.name)%>><%= p.name %></a></li>
     <% end %>
   </ul>
