--- a/views/index.erb
+++ b/views/index.erb
@@ -22,12 +22,17 @@
           <br/>
           <label for="saveas">Save as</label>
           <input id="saveas" type="text" name="fname" 
-                 title="name" pattern="\w+" />
+                 title="Un identificador (que no sea la palabra 'test')"
+                 pattern="^(?!test$)\w+$"
+          />
         </form>
       </td>
       <td><button id="parse" type="button">parse</button></td>
     </tr>
   </table>
+  </p>
+  <p>
+    <div id="flash"><%= flash[:notice] if flash[:notice]%></div>
   </p>
   <div class="output"><!-- Output goes here! --> 
 <pre>
