adding authentication. Not functional yet

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Analizador de PL0 ampliado usando Jison</h1>
+<h1>Calculadora usando Jison</h1>
 <div id="content">
   <p class="loadfile">
     <input type="file" id="examples" />
