--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,6 +12,7 @@
       <ul>
         <li> <a href="/grammar"  title="Grammar" <%=current?("/grammar")%>>Grammar</a> </li>
         <li> <a href="/"  title="Home" <%=current?("/")%>>Home</a> </li>
+        <li> <a href="/auth/google_oauth2"  title="Google" <%=current?("/auth/google_oauth2")%>>Sign in with Google</a> </li>
         <li> <a href="http://campusvirtual.ull.es/1314/course/view.php?id=1104"  title="PL-UDV">PL-UDV</a> </li>
         <li> <a href="https://github.com/crguezl/pegjscalc"  title="Repo">Repo</a> </li>
         <li> <a href="http://en.wikipedia.org/wiki/Recursive_descent_parser#Example_parser"   title="Wikipedia">PL0</a> </li>
