--- a/public/styles.css
+++ b/public/styles.css
@@ -29,7 +29,7 @@ nav {
     background: #444444;
     color: white; }
     nav a:hover {
-      background: #111111; }
+      background-color: #002eb8; }
 
 p {
   font: 13px/1.4 Helvetica, Arial, sans-serif; }
