--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,13 +14,13 @@
         <li> <a href="/"  title="Home" <%=current?("/")%>>Home</a> </li>
         <li> <a href="/auth/google_oauth2"  title="Google" <%=current?("/auth/google_oauth2")%>>Sign in with Google</a> </li>
         <li> <a href="http://campusvirtual.ull.es/1314/course/view.php?id=1104"  title="PL-UDV">PL-UDV</a> </li>
-        <li> <a href="https://github.com/crguezl/pegjscalc"  title="Repo">Repo</a> </li>
+        <li> <a href="https://github.com/crguezl/ull-etsii-grado-pl-jisoncalc"  title="Repo">Repo</a> </li>
         <li> <a href="http://en.wikipedia.org/wiki/Recursive_descent_parser#Example_parser"   title="Wikipedia">PL0</a> </li>
         <li> <a href="http://zaach.github.io/jison/"  title="Jison">Jison</a> </li>
-        <li> <a href="http://datamapper.org/"  title="DataMapper">DataMapper</a> </li>
-        <li> <a href="http://sass-lang.com/"  title="Sass">Sass</a> </li>
+        <li> <a href="http://intridea.github.io/omniauth/"  title="Omniauth">Intridea Omniauth</a> </li>
+        <li> <a href="https://console.developers.google.com/project"  title="Google Developers Console">Google Developers Console</a> </li>
         <li> <a href="http://crguezl.github.io/pl-html/"  title="PLGH">PL-GH</a> </li>
-        <li> <a href="http://docs.mathjax.org/en/latest/start.html"  title="MathJax">MathJax</a> </li>
+        <li> <a href="https://github.com/SFEley/sinatra-flash"  title="sinatra-flash">sinatra-flash</a> </li>
         <li> <a href="https://plus.google.com/u/0/+CasianoRodriguezLeon/" title="crguezl">crguezl</a> </li>
       </ul>
     </nav>
